--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
 	},
 	"homepage": "https://github.com/Hypothesize/repository.ts#readme",
 	"devDependencies": {
+		"@types/lodash": "^4.14.150",
+		"assert": "^2.0.0",
 		"typescript": "^3.8.3"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"lodash": "^4.17.15",
+		"pg-promise": "8.4.6"
 	}
 }
