--- a/package.json
+++ b/package.json
@@ -30,15 +30,19 @@
 	"devDependencies": {
 		"@types/assert": "^1.4.6",
 		"@types/lodash": "^4.14.150",
+		"@types/mocha": "^7.0.2",
 		"assert": "^2.0.0",
+		"mocha": "^7.1.1",
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
 		"@types/bcryptjs": "^2.4.2",
+		"@types/request": "^2.48.4",
 		"@types/shortid": "0.0.29",
 		"bcryptjs": "^2.4.3",
 		"lodash": "^4.17.15",
 		"pg-promise": "8.4.6",
+		"request": "^2.88.2",
 		"shortid": "^2.2.15"
 	}
 }
