--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
 	  "target": "es2015",
 	  "module": "commonjs",
 	  "declaration": true,
-	  "outDir": "./lib",
-	  "strict": true
+	  "outDir": "./lib"
 	},
 	"include": ["src", "index.d.ts"],
 	"exclude": ["node_modules", "**/__tests__/*"]
