--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
 	"compilerOptions": {
-	  "target": "es2015",
-	  "module": "commonjs",
-	  "declaration": true,
-	  "outDir": "./lib"
+		"target": "es2015",
+		"module": "commonjs",
+		"declaration": true,
+		"outDir": "./lib"
 	},
-	"include": ["src", "index.d.ts"],
-	"exclude": ["node_modules", "**/__tests__/*"]
-  }
+	"include": [
+		"src",
+		"src/types/index.d.ts", "src/types.d.ts"
+	],
+	"exclude": [
+		"node_modules",
+		"**/__tests__/*"
+	]
+}
