--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
 	"name": "hypothesize-repository",
 	"version": "0.0.5",
 	"description": "Database access through the repository pattern in Javascript/TypeScript",
-	"main": "./lib/index-browser.js",
-	"exports": "./lib/index.js",
+	"main": "./lib/index.js",
+	"browser": {
+		"./lib/index.js": "./lib/index-browser.js"
+	},
 	"types": "./lib/index.d.ts",
 	"scripts": {
 		"test": "mocha test\\",
