--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
 	"version": "0.0.5",
 	"description": "Database access through the repository pattern in Javascript/TypeScript",
 	"main": "./lib/index.js",
-	"browser": {
-		"./lib/index.js": "./lib/index-browser.js"
-	},
-	"types": "./lib/index.d.ts",
+	"declaration": true,
+	"types": "./lib/types.d.ts",
 	"scripts": {
 		"test": "mocha test\\",
-		"build": "tsc"
+		"build": "tsc && cpy \"./src/types.d.ts\" ./lib"
 	},
 	"repository": {
 		"type": "git",
@@ -35,6 +33,7 @@
 		"@types/lodash": "^4.14.150",
 		"@types/mocha": "^7.0.2",
 		"assert": "^2.0.0",
+		"cpy-cli": "^3.1.0",
 		"mocha": "^7.1.1",
 		"typescript": "^3.8.3"
 	},
