--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "Database access through the repository pattern in Javascript/TypeScript",
 	"main": "./lib/index.js",
 	"declaration": true,
-	"types": "./lib/types.d.ts",
+	"types": "./lib/index.d.ts",
 	"scripts": {
 		"test": "mocha test\\",
-		"build": "tsc && cpy \"./src/types.d.ts\" ./lib"
+		"build": "tsc"
 	},
 	"repository": {
 		"type": "git",
@@ -33,7 +33,6 @@
 		"@types/lodash": "^4.14.150",
 		"@types/mocha": "^7.0.2",
 		"assert": "^2.0.0",
-		"cpy-cli": "^3.1.0",
 		"mocha": "^7.1.1",
 		"typescript": "^3.8.3"
 	},
