--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"types": "./lib/index.d.ts",
 	"scripts": {
 		"test": "mocha test\\",
-		"build": "tsc"
+		"build": "tsc",
+		"prepare": "tsc"
 	},
 	"repository": {
 		"type": "git",
