--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"declaration": true,
 		"outDir": "./lib"
 	},
+	"types": "lib/index.d.ts",
 	"include": [
 		"src",
 		"src/types/index.d.ts", "src/types.d.ts"
