--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
 	"main": "./lib/index.js",
 	"declaration": true,
 	"types": "./lib/index.d.ts",
+	"eslintIgnore": [
+		"./node_modules",
+		"./lib"
+	],
 	"scripts": {
 		"test": "mocha test\\",
+		"lint": "eslint . --ext .ts",
 		"build": "tsc",
 		"prepare": "tsc"
 	},
@@ -28,16 +33,20 @@
 	"homepage": "https://github.com/Hypothesize/repository.ts#readme",
 	"devDependencies": {
 		"@types/assert": "^1.4.6",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/lodash": "^4.14.150",
 		"@types/mocha": "^7.0.2",
+		"@types/request": "^2.48.4",
+		"@types/shortid": "0.0.29",
+		"@typescript-eslint/eslint-plugin": "^2.33.0",
+		"@typescript-eslint/parser": "^2.33.0",
 		"assert": "^2.0.0",
+		"eslint": "^7.0.0",
+		"eslint-plugin-fp": "^2.3.0",
 		"mocha": "^7.1.1",
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
-		"@types/bcryptjs": "^2.4.2",
-		"@types/request": "^2.48.4",
-		"@types/shortid": "0.0.29",
 		"bcryptjs": "^2.4.3",
 		"lodash": "^4.17.15",
 		"pg-promise": "8.4.6",
