--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
 	"version": "0.0.5",
 	"description": "Database access through the repository pattern in Javascript/TypeScript",
 	"main": "./lib/index.js",
-	"declaration": true,
 	"types": "./lib/index.d.ts",
+	"files": [
+		"lib"
+	],
 	"eslintIgnore": [
 		"./node_modules",
 		"./lib"
 	],
 	"scripts": {
-		"test": "mocha test\\",
-		"lint": "eslint . --ext .ts",
-		"build": "tsc",
-		"prepare": "tsc"
+		"build": "ts-node --transpile-only ./tooling/build.ts",
+		"lint": "ts-node --transpile-only ./tooling/lint.js",
+		"test": "ts-node --transpile-only ./tooling/test.ts",
+		"benchmark": "node --transpile-only ./tooling/benchmark.ts",
+		"dev": "ts-node-dev --respawn --transpile-only ./tooling/build.ts",
+		"prepare": "npm run build"
 	},
 	"repository": {
 		"type": "git",
@@ -32,25 +36,26 @@
 	},
 	"homepage": "https://github.com/Hypothesize/repository.ts#readme",
 	"devDependencies": {
-		"@types/assert": "^1.4.6",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/lodash": "^4.14.150",
 		"@types/mocha": "^7.0.2",
-		"@types/request": "^2.48.4",
+		"@types/node": "^14.0.1",
+		"@types/shelljs": "^0.8.8",
 		"@types/shortid": "0.0.29",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
-		"assert": "^2.0.0",
 		"eslint": "^7.0.0",
 		"eslint-plugin-fp": "^2.3.0",
 		"mocha": "^7.1.1",
+		"shelljs": "^0.8.4",
+		"ts-node": "^8.10.1",
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"lodash": "^4.17.15",
-		"pg-promise": "8.4.6",
-		"request": "^2.88.2",
-		"shortid": "^2.2.15"
+		"pg-promise": "^10.5.6",
+		"shortid": "^2.2.15",
+		"stdlib": "git+https://041d76b0bba78be0133e4b5a8015ef09d1eacadb@github.com/Hypothesize/standard.ts.git#feature/8_Code_Quality_Enhancements"
 	}
 }
