--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,33 @@
 {
 	"compilerOptions": {
-		"target": "es2015",
+		"target": "ES2015",
 		"module": "commonjs",
-		"declaration": true,
-		"outDir": "./lib"
+		"lib": [
+			"DOM",
+			"DOM.Iterable",
+			"ScriptHost",
+			"ES5",
+			"ES2015",
+			"ES2016",
+			"ES2017",
+			"ES2018",
+			"ES2019",
+			"ES2020",
+			"ESNext",
+			"ES2018.Promise",
+			"ES2018.AsyncIterable"
+		],
+		"keyofStringsOnly": true,
+		"suppressImplicitAnyIndexErrors": true,
+		"strict": true,
+		"rootDirs": [
+			"./src",
+		],
+		"outDir": "./lib",
+		"noEmitOnError": true,
+		"declaration": true
 	},
-	"types": "lib/index.d.ts",
 	"include": [
-		"src",
-		"src/types/index.d.ts",
-		"src/types.d.ts"
-	],
-	"exclude": [
-		"node_modules",
-		"**/__tests__/*"
+		"src"
 	]
 }
