--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
 		"target": "es2015",
 		"module": "commonjs",
 		"declaration": true,
-		"outDir": "./lib"
+		"outDir": "./dist"
 	},
-	"types": "lib/index.d.ts",
+	"types": "dist/index.d.ts",
 	"include": [
 		"src",
-		"src/types/index.d.ts", "src/types.d.ts"
+		"src/types/index.d.ts",
+		"src/types.d.ts"
 	],
 	"exclude": [
 		"node_modules",
