--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
+		"@sparkwave/standard": "^2.4.0",
 		"@types/shortid": "0.0.29",
-		"shortid": "^2.2.15",
-		"standard": "git+https://github.com/Hypothesize/standard.git"
+		"bcryptjs": "^2.4.3",
+		"pg-promise": "^10.6.2",
+		"shortid": "^2.2.15"
 	}
 }
