--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,27 @@
 	"compilerOptions": {
 		"target": "es2015",
 		"module": "commonjs",
+		"moduleResolution": "node",
+		"traceResolution": false,
 		"declaration": true,
-		"outDir": "./dist",
-		"strictNullChecks": true,
+		"lib": [
+			"es7",
+			"es6",
+			"es5",
+			"dom",
+			"es2015.promise",
+			"scripthost",
+			"dom.iterable",
+			"esnext.asynciterable"
+		],
 		"strict": true,
-		"incremental": true
+		"strictNullChecks": true,
+		"skipLibCheck": true,
+		"incremental": true,
+		"outDir": "./dist"
 	},
-	"types": "dist/index.d.ts",
 	"include": [
-		"src",
-		"src/types/index.d.ts",
-		"src/types.d.ts"
+		"./src",
 	],
-	"exclude": [
-		"node_modules",
-		"**/__tests__/*"
-	]
+	"exclude": []
 }
