--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -2,9 +2,10 @@ name: CI Workflow
 
 on:
   push:
-    branches: [ master ]
+    # branches: [ master ]
   pull_request:
-    branches: [ master ]
+    # branches: [ master ]
+    types: ['synchronize']
 
 jobs:
   build:
@@ -23,32 +24,29 @@ jobs:
         node-version: ${{ matrix.node-version }}
        
     - name: Install dependencies
-      run: npm install
+      run: npm ci --no-audit --prefer-offline
 
-    - name: Run linters
-      uses: samuelmeuli/lint-action@v1
+    - name: Run Lint Check
+      run: npm run lint-report
+      continue-on-error: true
+    
+    - name: Run Test Check
+      run: npm run test-report
+      continue-on-error: true
+
+    - name: Annotate code checks
+      uses: agyemanjp/ci-checks-action@2.0.2
       with:
-        github_token: ${{ secrets.github_token }}
-        eslint: true # Enable linters
-        # prettier: true
-    - name: eslint
-      uses: icrawl/action-eslint@v1
-      #with:
-      #  custom-glob: apps # only if a different glob is needed, default: src
-
-    - run: npm run build --if-present
-    - run: npm run test
-
-    # - name: Run a multi-line script
-    #   env:
-    #     RW_TOKEN: ${{ secrets.RW_TOKEN }}
-    #   shell: bash
-    #   run: |
-    #     curl --request POST \
-    #     --url https://api.github.com/repos/myaccount/mytestrepo/issues \
-    #     --header 'authorization: Bearer'" $RW_TOKEN" \
-    #     --header 'content-type: application/json' \
-    #     --data '{
-    #       "title": "Automated issue for commit: ${{ github.sha }}",
-    #       "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
-    #       }'
+        ghToken: "${{ secrets.GITHUB_TOKEN }}"
+        checks: '[
+              {
+                "name": "lint",
+                "fileName": ".lint-report.json",
+                "prChangesOnly": true
+              },
+              {
+                "name": "test",
+                "fileName": ".test-report.json",
+                "prChangesOnly": false
+              }
+            ]'
