--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
 		"@typescript-eslint/eslint-plugin": "3.4.0",
 		"@typescript-eslint/parser": "3.4.0",
 		"eslint": "^7.3.1",
+		"eslint-formatter-json-standard": "^1.0.0",
 		"eslint-plugin-fp": "2.3.0",
 		"mocha": "^7.1.1",
+		"mocha-reporter-json-standard": "^1.0.0",
 		"source-map-support": "^0.5.19",
 		"ts-node": "^8.10.2",
 		"typescript": "^4.0.5"
