--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -24,8 +24,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
        
     - name: Install dependencies
-      run: npm ci --no-audit --prefer-offline
-
+      run: npm install
+      
     - name: Run Lint Check
       run: npm run lint-report
       continue-on-error: true
