--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"setup": "rm -rf ./node_modules package-lock.json && npm install",
 		"clean": "rm -rf dist/* .eslintcache *-report.json",
 		"lint": "eslint --ext ts --cache 'src/**'",
-		"lint-report": "eslint --ext ts --output-file .lint-report.json --format json-standard --cache src/*",
+		"lint-report": "eslint --ext ts --output-file .lint-report.json --format json-standard --cache 'src/**'",
 		"compile": "tsc",
 		"test": "mocha --require ts-node/register test/*.test.*",
 		"test-report": "mocha --require ts-node/register test/*.test.* --reporter mocha-reporter-json-standard >| .test-report.json",
