--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -39,7 +39,7 @@ jobs:
         continue-on-error: true
          
       - name: Annotate
-        uses: agyemanjp/ci-checks-action@2.1.1
+        uses: agyemanjp/ci-checks-action@v2.1.1
         with:
           ghToken: "${{ secrets.GITHUB_TOKEN }}"
           checks: '[
