--- a/package.json
+++ b/package.json
@@ -8,18 +8,6 @@
 		"*",
 		"!*.tsbuildinfo"
 	],
-	"scripts": {
-		"deps": "rm -rf ./node_modules package-lock.json && npm install",
-		"clean": "rm -rf dist/* .eslintcache *-report.json",
-		"lint": "eslint --ext ts --cache 'src/**'",
-		"lint-report": "eslint --ext ts --output-file .lint-report.json --format json-standard --cache 'src/**'",
-		"compile": "tsc",
-		"test": "mocha --require ts-node/register test/*.test.*",
-		"test-report": "mocha --require ts-node/register test/*.test.* --reporter mocha-reporter-json-standard >| .test-report.json",
-		"build": "npm run clean && npm run lint && npm run compile && npm run test",
-		"package": "git push --follow-tags && cp package.json LICENSE README.md dist && cd dist && npm publish --dry-run",
-		"pub": "cd /dist && npm publish --access public && cd .."
-	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/Hypothesize/storage.js.git"
@@ -44,11 +32,14 @@
 		"@types/request": "^2.48.5",
 		"@types/shortid": "0.0.29",
 		"@types/source-map-support": "^0.5.1",
-		"@typescript-eslint/eslint-plugin": "3.4.0",
-		"@typescript-eslint/parser": "3.4.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.6",
+		"@typescript-eslint/parser": "^5.59.6",
 		"eslint": "^7.3.1",
 		"eslint-formatter-json-standard": "^1.0.0",
 		"eslint-plugin-fp": "2.3.0",
+		"eslint-plugin-jsdoc": "^44.2.4",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-sonarjs": "^0.19.0",
 		"mocha": "^7.1.1",
 		"mocha-reporter-json-standard": "^1.0.0",
 		"source-map-support": "^0.5.19",
@@ -58,5 +49,17 @@
 	"dependencies": {
 		"@sparkwave/standard": "2.29.1",
 		"shortid": "^2.2.15"
+	},
+	"scripts": {
+		"deps": "rm -rf ./node_modules package-lock.json && npm install",
+		"clean": "rm -rf dist/* .eslintcache *-report.json",
+		"lint": "eslint --ext ts --cache 'src/**'",
+		"lint-report": "eslint --ext ts --output-file .lint-report.json --format json-standard --cache 'src/**'",
+		"compile": "tsc",
+		"test": "mocha --require ts-node/register tests/*.test.*",
+		"test-report": "mocha tests/*.test.js --reporter mocha-reporter-json-standard >| .test-report.json",
+		"build": "npm run clean && npm run lint && npm run compile && npm run test",
+		"package": "git push --follow-tags && cp package.json LICENSE README.md dist && cd dist && npm publish --dry-run",
+		"pub": "cd /dist && npm publish --access public && cd .."
 	}
 }
